# study

pearls-of-functional-algorithm-design/: LICENSE  Makefile  pearls.cabal
pearls-of-functional-algorithm-design/bench/: FreeNumberBench.hs
pearls-of-functional-algorithm-design/src/: FreeNumber.hs
pearls-of-functional-algorithm-design/tests/: FreeNumberTest.hs
